infra/gateway/overlays/prod/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http-redirect
    - name: external
      namespace: gateway
      sectionName: http-redirect
  hostnames:
    - "*.home.canmugrons.xyz"
    - "home.canmugrons.xyz"
    - "*.cornfakes.xyz"
    - "cornfakes.xyz"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
